--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@heroicons/react": "^2.0.18",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.2",
+    "@reduxjs/toolkit": "^1.9.5",
     "firebase": "^9.22.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-button": "^0.7.2",
+    "react-redux": "^8.0.7",
     "react-router-dom": "^6.11.2"
   },
   "devDependencies": {
