--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@mui/material": "^5.13.2",
     "@reduxjs/toolkit": "^1.9.5",
     "firebase": "^9.22.1",
+    "flowbite": "^1.6.6",
+    "flowbite-react": "^0.4.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-google-button": "^0.7.2",
