--- a/package.json
+++ b/package.json
@@ -10,22 +10,26 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^2.2.1",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@headlessui/react": "^1.7.15",
     "@heroicons/react": "^2.0.18",
-    "@mui/icons-material": "^5.11.16",
-    "@mui/material": "^5.13.2",
     "@reduxjs/toolkit": "^1.9.5",
+    "auth0-js": "^9.23.0",
+    "dayjs": "^1.11.10",
     "firebase": "^9.22.1",
     "flowbite": "^1.6.6",
     "flowbite-react": "^0.4.7",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.7",
-    "react-router-dom": "^6.11.2"
+    "react-router-dom": "^6.11.2",
+    "react-tailwindcss-datepicker": "^1.6.6"
   },
   "devDependencies": {
+    "@types/auth0-js": "^9.21.1",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@types/react-redux": "^7.1.25",
