--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-paystack": "^4.0.3",
     "react-redux": "^8.0.7",
     "react-router-dom": "^6.11.2",
     "react-tailwindcss-datepicker": "^1.6.6"
