--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "firebase": "^9.22.1",
     "flowbite": "^1.6.6",
     "flowbite-react": "^0.4.7",
+    "flutterwave-react-v3": "^1.3.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
