--- a/package.json
+++ b/package.json
@@ -22,13 +22,16 @@
     "flowbite": "^1.6.6",
     "flowbite-react": "^0.4.7",
     "flutterwave-react-v3": "^1.3.0",
+    "lucide-react": "^0.291.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-paystack": "^4.0.3",
+    "react-query": "^3.39.3",
     "react-redux": "^8.0.7",
     "react-router-dom": "^6.11.2",
-    "react-tailwindcss-datepicker": "^1.6.6"
+    "react-tailwindcss-datepicker": "^1.6.6",
+    "react-toastify": "^9.1.3"
   },
   "devDependencies": {
     "@types/auth0-js": "^9.21.1",
