--- a/package.json
+++ b/package.json
@@ -10,14 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@auth0/auth0-react": "^2.2.1",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@headlessui/react": "^1.7.15",
     "@heroicons/react": "^2.0.18",
     "@reduxjs/toolkit": "^1.9.5",
     "auth0-js": "^9.23.0",
-    "dayjs": "^1.11.10",
+    "axios": "^1.6.2",
     "firebase": "^9.22.1",
     "flowbite": "^1.6.6",
     "flowbite-react": "^0.4.7",
@@ -30,7 +29,6 @@
     "react-query": "^3.39.3",
     "react-redux": "^8.0.7",
     "react-router-dom": "^6.11.2",
-    "react-tailwindcss-datepicker": "^1.6.6",
     "react-toastify": "^9.1.3"
   },
   "devDependencies": {
